client-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-lb-service
spec:
  type: LoadBalancer
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
      name: https
